--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -567,23 +567,28 @@
                     />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <Button
+                    android:id="@+id/btn_etiketka"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Этикетка"
+                    android:layout_marginLeft="150dp"
+                    android:textColor="@android:color/black" />
+
+                <Button
+                    android:id="@+id/btn_otpr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Отправить"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/btn_etiketka"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/btn_otpr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
 
     </ScrollView>
 
