--- a/app/src/main/res/drawable/status_circle_blue.xml
+++ b/app/src/main/res/drawable/status_circle_blue.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#1a65a4"/>
-        </shape>
-    </item>
-</selector>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid
+        android:color="#1a65a4"/>
+</shape>
