--- a/app/src/main/res/layout/activity_superviser_list.xml
+++ b/app/src/main/res/layout/activity_superviser_list.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:id="@+id/search_field"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="26dp"
         android:layout_margin="16dp"
         android:background="@android:color/white"
         android:elevation="12dp">
@@ -19,10 +19,10 @@
             android:id="@+id/ivSearch"
             android:layout_width="32dp"
             android:layout_height="32dp"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
-            android:src="@mipmap/search"
-            android:layout_alignParentEnd="true"/>
+            android:src="@mipmap/search" />
 
         <AutoCompleteTextView
             android:id="@+id/etSearch"
@@ -30,19 +30,22 @@
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
             android:background="@null"
             android:hint="Введите номер заявки"
             android:imeOptions="actionSearch"
             android:textColor="#000"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+
+            />
 
     </RelativeLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <ListView
             android:id="@+id/superviser_list"
             android:layout_width="match_parent"
