--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -3,5 +3,5 @@
 
     <external-path
         name="my_images"
-        path="Android/data/kz.glotus.glotusapp/files/Pictures" />
+        path="Android/data/com.example.usk.glotus_final/files/Pictures" />
 </paths>
