--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -62,54 +62,10 @@
             android:orientation="vertical"
             android:padding="20dp">
 
-
-            <TextView
-                android:textStyle="bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:text="Документ основания"
-                android:textAlignment="textStart"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="18sp" />
-
-            <Spinner
-                android:id="@+id/spinner_document_osnov"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-
-                        android:id="@+id/tv_1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Дата"
-                        android:textStyle="bold"
-                        android:textAlignment="textStart"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp" />
-
-                    <EditText
-                        android:id="@+id/et_data"
-                        android:layout_width="88dp"
-                        android:layout_height="wrap_content"
-                        android:ems="5"
-                        android:inputType="date"
-                        android:text="21.09.18"
-                        android:textAlignment="center"
-                        android:textSize="18sp" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -588,6 +544,13 @@
                     android:textAlignment="textStart"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spinner_soprDoc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp" />
+
 
                 <TextView
                     android:layout_width="match_parent"
