--- a/app/src/main/res/menu/pdf_menu.xml
+++ b/app/src/main/res/menu/pdf_menu.xml
@@ -5,5 +5,13 @@
     <item
         android:id="@+id/pdf_create"
         android:title="@string/generate"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/btn_print"
+        android:title="print"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/btn_ok"
+        android:title="OK"
+        app:showAsAction="always" />
 </menu>
