--- a/app/src/main/res/layout/activity_manager_list.xml
+++ b/app/src/main/res/layout/activity_manager_list.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SuperviserListFiles.SuperviserListActivity"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -41,39 +40,31 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/manager_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_view"
+        <ListView
+            android:id="@+id/superviser_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp" />
 
-            <ListView
-                android:id="@+id/superviser_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="8dp"
-                />
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <ImageButton
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:id="@+id/fab"
-            android:background="@drawable/grey"
-            android:elevation="10dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="65dp"
-            />
-
-    </RelativeLayout>
-
-
-
+    </LinearLayout>-->
 
 </LinearLayout>
