--- a/app/src/main/res/layout/superviser_list_item_layout.xml
+++ b/app/src/main/res/layout/superviser_list_item_layout.xml
@@ -34,7 +34,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Hello"
-                android:layout_weight="40"/>
+                android:layout_weight="40"
+                android:textColor="@android:color/black"
+                />
             
         </LinearLayout>
 
@@ -42,9 +44,12 @@
             android:id="@+id/tv_code"
             android:layout_width="match_parent"
             android:layout_height="28dp"
-            android:textStyle="bold"
             android:gravity="center"
-            android:text="Hello"/>
+            android:text="Hello"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            />
 
     </LinearLayout>
 
@@ -70,13 +75,20 @@
                     android:id="@+id/tv_otkuda"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:text="Hello"/>
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    />
 
                 <TextView
                     android:id="@+id/tv_otpravitel"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:text="Hello"/>
+                    android:text="Hello"
+                    android:textColor="@color/otpravitelRed"
+                    android:textAlignment="center"
+                    />
 
             </LinearLayout>
 
@@ -104,13 +116,20 @@
                     android:id="@+id/tv_kuda"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:text="Hello"/>
+                    android:text="Hello"
+                    android:textColor="@android:color/black"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    />
 
                 <TextView
                     android:id="@+id/tv_poluchatel"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:text="Hello"/>
+                    android:text="Hello"
+                    android:textColor="@color/colorAccent"
+                    android:textAlignment="center"
+                    />
 
             </LinearLayout>
 
@@ -120,6 +139,9 @@
             android:id="@+id/tv_manager"
             android:layout_width="match_parent"
             android:layout_height="20dp"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:text="Hello"
             />
 
     </LinearLayout>
