--- a/app/src/main/res/layout/wifi_direct.xml
+++ b/app/src/main/res/layout/wifi_direct.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".WifiManagerService.WifiManagerClass">
+    tools:context=".SuperviserApp.WifiManagerService.WifiManagerClass">
 
     <TextView
         android:id="@+id/status"
