--- a/app/src/main/res/layout/activity_etiketka.xml
+++ b/app/src/main/res/layout/activity_etiketka.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ReceptionFiles.Etiketka"
+    tools:context=".SuperviserApp.ReceptionFiles.Etiketka"
     tools:layout_editor_absoluteY="25dp">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
