--- a/app/src/main/res/layout/activity_exped.xml
+++ b/app/src/main/res/layout/activity_exped.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReceptionFiles.ExpedPage">
+    tools:context=".SuperviserApp.ReceptionFiles.ExpedPage">
 
 
     <ScrollView
