--- a/app/src/main/res/layout/camera_activity.xml
+++ b/app/src/main/res/layout/camera_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usk.glotus_final.ReceptionFiles.CameraActivity">
+    tools:context=".SuperviserApp.ReceptionFiles.CameraActivity">
 
     <Button
         android:id="@+id/btn"
