--- a/app/src/main/res/layout/manager_list_item_layout.xml
+++ b/app/src/main/res/layout/manager_list_item_layout.xml
@@ -177,20 +177,20 @@
         </LinearLayout>
 
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:weightSum="100"
-        android:baselineAligned="false">
+        android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="50"
-            android:orientation="vertical"
-            android:background="@drawable/rectangle_field">
+            android:background="@drawable/rectangle_field"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -202,18 +202,16 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//ves plan"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_ves_plan_num"
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_ves_plan"
                     android:layout_height="25dp"
+                    android:layout_toEndOf="@+id/tv_ves_plan"
                     android:text="//ves plan"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -227,18 +225,16 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//ves fact"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_ves_fact_num"
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_ves_fact"
                     android:layout_height="25dp"
+                    android:layout_toEndOf="@+id/tv_ves_fact"
                     android:text="//ves fact"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -252,18 +248,16 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//volume plan"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_volume_plan_num"
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_volume_plan"
                     android:layout_height="25dp"
+                    android:layout_toEndOf="@+id/tv_volume_plan"
                     android:text="//volume plan"
-                    android:textSize="16sp"
                     android:textColor="@android:color/black"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -277,8 +271,7 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//volume fact"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_volume_fact_num"
@@ -287,8 +280,7 @@
                     android:layout_toEndOf="@+id/tv_volume_fact"
                     android:text="//volume fact"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -302,18 +294,16 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//kolvo plan"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_kolvo_plan_num"
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_kolvo_plan"
                     android:layout_height="25dp"
+                    android:layout_toEndOf="@+id/tv_kolvo_plan"
                     android:text="//kolvo plan"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -327,18 +317,16 @@
                     android:layout_width="90dp"
                     android:layout_height="25dp"
                     android:text="//kolvo fact"
-                    android:textColor="@android:color/black"
-                    />
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/tv_kolvo_fact_num"
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@id/tv_kolvo_fact"
                     android:layout_height="25dp"
+                    android:layout_toEndOf="@id/tv_kolvo_fact"
                     android:text="//kolvo fact"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
             </RelativeLayout>
 
@@ -357,8 +345,7 @@
                 android:text="//partner"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/tv_status"
@@ -367,8 +354,7 @@
                 android:text="//status"
                 android:textAlignment="center"
                 android:textColor="@color/otpravitelRed"
-                android:textSize="16sp"
-                />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_tovar"
@@ -377,8 +363,7 @@
                 android:text="//tovar"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
-                />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_document"
@@ -387,8 +372,7 @@
                 android:text="//document"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
