--- a/app/src/main/res/drawable/button_main.xml
+++ b/app/src/main/res/drawable/button_main.xml
@@ -1,8 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="250.02dp"
+    android:height="39dp"
+    android:viewportWidth="250.02"
+    android:viewportHeight="39"
+    >
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
 
-    <solid android:color="@color/colorAccent" />
-    <corners android:radius="5dp" />
+        <solid android:color="@color/colorAccent" />
+        <corners android:radius="5dp" />
 
-</shape>
+
+    </shape>
+
+    <group>
+
+        <clip-path
+            android:pathData="M0.5 0.5H249.524V38.5H0.5V0.5Z"
+            />
+
+        <path
+            android:pathData="M0.5 0.5V38.5H249.524V0.5"
+            android:fillColor="#1A65A4"
+            />
+
+    </group>
+
+</vector>
+
+
