--- a/app/src/main/res/layout/activity_reception.xml
+++ b/app/src/main/res/layout/activity_reception.xml
@@ -8,49 +8,50 @@
     android:weightSum="100"
     tools:context=".SuperviserApp.ReceptionFiles.Reception">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="28dp"
-        android:orientation="horizontal"
-        android:weightSum="100">
+        android:background="@color/colorPrimaryDark">
 
         <TextView
             android:id="@+id/tv_nomer"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="Номер"
             android:textSize="24sp"
             android:textColor="@android:color/white"
-            android:background="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:layout_weight="50"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
             />
 
         <TextView
-            android:layout_width="0dp"
+            android:id="@+id/tv_1"
+            android:layout_width="wrap_content"
             android:textStyle="bold"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text=" от "
+            android:layout_marginStart="4dp"
             android:textSize="24sp"
             android:textColor="@android:color/white"
-            android:background="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:layout_weight="10"
+            android:layout_toEndOf="@+id/tv_nomer"
             />
 
         <TextView
             android:id="@+id/tv_data"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text=" дата "
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="4dp"
+            android:text="//дата "
             android:textSize="24sp"
             android:textColor="@android:color/white"
-            android:background="@color/colorPrimaryDark"
             android:textAlignment="center"
-            android:layout_weight="40"
+            android:layout_toEndOf="@+id/tv_1"
+            android:layout_alignParentEnd="true"
             />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -60,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="12dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,7 +92,7 @@
                         android:layout_marginLeft="57dp"
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
-                        android:text="заказчик"
+                        android:text="//заказчик"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
@@ -120,7 +121,7 @@
                         android:layout_marginLeft="25dp"
                         android:paddingBottom="4dp"
                         android:paddingTop="4dp"
-                        android:text="отправитель"
+                        android:text="//отправитель"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
                 </LinearLayout>
