--- a/app/src/main/res/layout/manager_list_item_layout.xml
+++ b/app/src/main/res/layout/manager_list_item_layout.xml
@@ -16,8 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:weightSum="100"
-        >
+        android:weightSum="100">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,15 +30,6 @@
                 android:orientation="horizontal"
                 android:weightSum="100">
 
-
-                <ImageView
-                    android:id="@+id/iv_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="60"
-                    app:srcCompat="@mipmap/ic_launcher"
-                    />
-
                 <TextView
                     android:id="@+id/tv_data"
                     android:layout_width="match_parent"
@@ -47,6 +37,8 @@
                     android:text="//data"
                     android:layout_weight="40"
                     android:textColor="@android:color/black"
+                    android:textAlignment="center"
+                    android:gravity="center"
                     />
 
             </LinearLayout>
@@ -90,6 +82,7 @@
                         android:textColor="@android:color/black"
                         android:textAlignment="center"
                         android:textStyle="bold"
+                        android:gravity="center"
                         />
 
                     <TextView
@@ -107,13 +100,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:orientation="vertical"
-                    android:layout_weight="40">
+                    android:layout_weight="40"
+                    android:gravity="center">
 
                     <ImageView
                         android:id="@+id/iv_strela"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/right_arrow"
+                        android:src="@drawable/ic_gruzovik_blue_24dp"
                         />
                 </LinearLayout>
 
@@ -131,6 +125,7 @@
                         android:textColor="@android:color/black"
                         android:textAlignment="center"
                         android:textStyle="bold"
+                        android:gravity="center"
                         />
 
                     <TextView
@@ -185,7 +180,7 @@
     <LinearLayout
         android:id="@+id/ll_moreInf"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:weightSum="100"
         android:baselineAligned="false">
@@ -197,155 +192,26 @@
             android:orientation="vertical"
             android:background="@drawable/rectangle_field">
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tv_status"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
+                android:layout_height="28dp"
+                android:text="//status"
+                android:textAlignment="center"
+                android:textColor="@color/otpravitelRed"
+                android:textSize="16sp"
+                android:gravity="center"
+                />
 
-                <TextView
-                    android:id="@+id/tv_ves_plan"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//ves plan"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_ves_plan_num"
-                    android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_ves_plan"
-                    android:layout_height="25dp"
-                    android:text="//ves plan"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tv_document"
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
-
-                <TextView
-                    android:id="@+id/tv_ves_fact"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//ves fact"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_ves_fact_num"
-                    android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_ves_fact"
-                    android:layout_height="25dp"
-                    android:text="//ves fact"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
-
-                <TextView
-                    android:id="@+id/tv_volume_plan"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//volume plan"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_volume_plan_num"
-                    android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_volume_plan"
-                    android:layout_height="25dp"
-                    android:text="//volume plan"
-                    android:textSize="16sp"
-                    android:textColor="@android:color/black"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
-
-                <TextView
-                    android:id="@+id/tv_volume_fact"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//volume fact"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_volume_fact_num"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_toEndOf="@+id/tv_volume_fact"
-                    android:text="//volume fact"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
-
-                <TextView
-                    android:id="@+id/tv_kolvo_plan"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//kolvo plan"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_kolvo_plan_num"
-                    android:layout_width="match_parent"
-                    android:layout_toEndOf="@+id/tv_kolvo_plan"
-                    android:layout_height="25dp"
-                    android:text="//kolvo plan"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@drawable/rectangle_field">
-
-                <TextView
-                    android:id="@+id/tv_kolvo_fact"
-                    android:layout_width="90dp"
-                    android:layout_height="25dp"
-                    android:text="//kolvo fact"
-                    android:textColor="@android:color/black"
-                    />
-
-                <TextView
-                    android:id="@+id/tv_kolvo_fact_num"
-                    android:layout_width="match_parent"
-                    android:layout_toEndOf="@id/tv_kolvo_fact"
-                    android:layout_height="25dp"
-                    android:text="//kolvo fact"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    />
-
-            </RelativeLayout>
+                android:layout_height="32dp"
+                android:text="//document"
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                />
 
         </LinearLayout>
 
@@ -358,41 +224,22 @@
             <TextView
                 android:id="@+id/tv_partner"
                 android:layout_width="match_parent"
-                android:layout_height="36dp"
+                android:layout_height="28dp"
                 android:text="//partner"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                />
-
-            <TextView
-                android:id="@+id/tv_status"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
-                android:text="//status"
-                android:textAlignment="center"
-                android:textColor="@color/otpravitelRed"
-                android:textSize="16sp"
+                android:gravity="center"
                 />
 
             <TextView
                 android:id="@+id/tv_tovar"
                 android:layout_width="match_parent"
-                android:layout_height="41dp"
+                android:layout_height="32dp"
                 android:text="//tovar"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
-                />
-
-            <TextView
-                android:id="@+id/tv_document"
-                android:layout_width="match_parent"
-                android:layout_height="41dp"
-                android:text="//document"
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
                 />
 
         </LinearLayout>
