--- a/app/src/main/res/layout/manager_list_item_layout.xml
+++ b/app/src/main/res/layout/manager_list_item_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:onClick="onClick"
+
     android:orientation="vertical"
     android:weightSum="100">
 
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:visibility="visible"
+
         android:weightSum="100">
 
         <LinearLayout
@@ -194,7 +195,7 @@
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:orientation="horizontal"
-        android:visibility="gone"
+        android:visibility="visible"
         android:weightSum="100">
 
         <LinearLayout
